--- a/src/components/routeList/RouteCardLayout.css
+++ b/src/components/routeList/RouteCardLayout.css
@@ -1,6 +1,6 @@
 .routeCardGrid {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 3fr;
     grid-template-areas: 
         "routeCardImage routeCardHeader"
         "routeCardImage routeCardInfo";
@@ -11,6 +11,12 @@
 
 .routeCardHeader {
     grid-area: routeCardHeader;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-areas: 
+        "routeCardTitle routeCardInfoButton"
+        "routeCardHorizontalBarSeparator routeCardInfoButton";
+    height: 60px;
 }
 
 .routeCardImage {
@@ -23,6 +29,18 @@
     grid-area: routeCardInfo;
 }
 
+.routeCardTitle {
+    grid-area: routeCardTitle;
+}
+
+.routeCardInfoButton {
+    grid-area: routeCardInfoButton;
+}
+
+.horizontalBarSeparator {
+    grid-area: routeCardHorizontalBarSeparator;
+}
+
 .routeCardHeader p {
     text-align: left;
     margin: 0;
@@ -32,13 +50,17 @@
 .routeCardInfo {
     text-align: left;
 }
-    
+
 .routeCardImage img {
-    width: 100%; 
-    height: 100%; 
+    width: 100%;
+    height: 100%;
 }
 
 .routeCard p {
     list-style-type: none;
     margin: 0;
+}
+
+.routeCardInfo p {
+    padding-left: 2.5%;
 }
