--- a/src/components/routeList/RouteCardLayout.css
+++ b/src/components/routeList/RouteCardLayout.css
@@ -44,7 +44,7 @@
 .routeCardHeader p {
     text-align: left;
     margin: 0;
-    padding: 0 2.5% 1% 2.5%;
+    padding: 2.5% 2.5% 1% 2.5%;
 }
 
 .routeCardInfo {
