--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+ body{
+  background-color: #282c34;
+ }
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -27,6 +31,7 @@
 .App-link {
   color: #61dafb;
 }
+
 
 @keyframes App-logo-spin {
   from {
