Added a carousel for the home  view when the user is not auth.

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,9 @@
 .App {
   text-align: center;
 }
-
- body{
-  background-color: #282c34;
- }
-
+body{
+  background-color: #282c34 !important;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
