Moved application assets, fixed some codacy issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 body{
-  background-color: #282c34 !important;
+  background-color: #282c34;
 }
 .App-logo {
   height: 40vmin;
