--- a/src/css/App.css
+++ b/src/css/App.css
@@ -26,6 +26,13 @@ body {
   color: #61dafb;
 }
 
+.App-FlexCenterColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 * {
   box-sizing: border-box;
 }
